# goose

./: AGENTS.md  CONTRIBUTING.md  CUSTOM_DISTROS.md  Cargo.toml  I18N.md  Justfile  README.md  RELEASE_CHECKLIST.md  download_cli.sh
.github/: dependabot.yml
crates/goose/: Cargo.toml  acp-meta.json  acp-schema.json
crates/goose-acp-macros/: Cargo.toml
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: lib.rs  subprocess.rs  windows_job.rs
crates/goose-models-db/: Cargo.toml
crates/goose-models-db/src/canonical/: README.md
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: anthropic.rs  base.rs  canonical.rs  conversation.rs  errors.rs  http_status.rs  images.rs  json.rs  lib.rs  model.rs  models.rs  openai.rs  openai_compatible.rs  openai_def.rs  retry.rs  runtime.rs  utils.rs
crates/goose-providers/src/canonical/: README.md  catalog.rs  model.rs  name_builder.rs
crates/goose-providers/src/canonical/data/: canonical_models.json  provider_metadata.json
crates/goose-providers/src/conversation/: message.rs  token_usage.rs
crates/goose-providers/src/formats/: ollama.rs  openai.rs  openai_responses.rs
crates/goose-providers/src/providers/: acp_tooling.rs  amp_acp.rs  anthropic.rs  api_client.rs  azure.rs  azureauth.rs  bedrock.rs  catalog.rs  chatgpt_codex.rs  claude_acp.rs  claude_code.rs  codex.rs  codex_acp.rs  copilot_acp.rs  databricks.rs  databricks_v2.rs  gcpauth.rs  gcpvertexai.rs  gemini_oauth.rs  githubcopilot.rs  google.rs  http_status.rs  init.rs  kimicode.rs  litellm.rs  mod.rs  nanogpt.rs  oauth.rs  oauth_device_flow.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  pi_acp.rs  provider_registry.rs  snowflake.rs  tetrate.rs  toolshim.rs  utils.rs  xai_oauth.rs
crates/goose-providers/src/providers/canonical/: README.md  build_canonical_models.rs  mod.rs  name_builder.rs
crates/goose-sdk/: .gitignore  Cargo.toml  README.md  justfile  uniffi.toml
crates/goose-sdk-types/: Cargo.toml
crates/goose-sdk-types/src/: custom_notifications.rs  custom_requests.rs  lib.rs
crates/goose-sdk/examples/uniffi/: Ping.kt  PingAaif.kt  ping.py  ping_aaif.py
crates/goose-sdk/src/: bindings.rs  lib.rs  providers.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: auth.rs  logging.rs  openapi.rs  session_event_bus.rs  state.rs
crates/goose-server/src/commands/: agent.rs
crates/goose-server/src/routes/: agent.rs  config_management.rs  errors.rs  local_inference.rs  recipe.rs  recipe_utils.rs  reply.rs  sampling.rs  session.rs  session_events.rs  telemetry.rs  utils.rs
crates/goose-types/: Cargo.toml
crates/goose-types/src/: lib.rs  model.rs
crates/goose-types/src/conversation/: message.rs  mod.rs  tool_result_serde.rs
crates/goose/examples/: agent.rs  databricks_oauth.rs  image_tool.rs
crates/goose/src/: action_required_manager.rs  builtin_extension.rs  doctor.rs  download_manager.rs  elicitation.rs  lib.rs  model.rs  model_config.rs  posthog.rs  scheduler.rs  session_context.rs  sources.rs  token_counter.rs  tool_inspection.rs  tool_monitor.rs  utils.rs  windows_job.rs
crates/goose/src/acp/: mod.rs  provider.rs  response_builder.rs  server.rs  server_factory.rs
crates/goose/src/agents/: agent.rs  complexity_router.rs  execute_commands.rs  extension.rs  extension_manager.rs  large_response_handler.rs  mcp_client.rs  mod.rs  moim.rs  prompt_manager.rs  reply_parts.rs  retry.rs  subagent_handler.rs  tool_execution.rs
crates/goose/src/checks/: mod.rs
crates/goose/src/config/: base.rs  declarative_providers.rs  extensions.rs  migrations.rs  mod.rs  paths.rs  providers.rs  schema.rs
crates/goose/src/context_mgmt/: mod.rs
crates/goose/src/conversation/: dedup.rs  mod.rs
crates/goose/src/execution/: manager.rs
crates/goose/src/gateway/: handler.rs  pairing.rs
crates/goose/src/goose_apps/: cache.rs
crates/goose/src/hints/: load_hints.rs
crates/goose/src/hooks/: mod.rs
crates/goose/src/oauth/: mod.rs
crates/goose/src/otel/: otlp.rs
crates/goose/src/permission/: mod.rs  permission_inspector.rs  permission_judge.rs  permission_store.rs
crates/goose/src/plugins/: discovery.rs  mcp_servers.rs  mod.rs
crates/goose/src/prompts/: subagent_system.md  system.md  tiny_model_system.md
crates/goose/src/providers/: acp_tooling.rs  amp_acp.rs  anthropic.rs  api_client.rs  avian.rs  azure.rs  azureauth.rs  base.rs  bedrock.rs  catalog.rs  catalog_util.rs  chatgpt_codex.rs  claude_acp.rs  claude_code.rs  cli_common.rs  codex.rs  codex_acp.rs  copilot_acp.rs  cursor_agent.rs  databricks.rs  databricks_auth.rs  databricks_v2.rs  gcpauth.rs  gcpvertexai.rs  gemini_cli.rs  gemini_oauth.rs  githubcopilot.rs  google.rs  http_status.rs  huggingface.rs  huggingface_auth.rs  init.rs  kimicode.rs  litellm.rs  local_inference.rs  mod.rs  nanogpt.rs  ollama.rs  openai.rs  openai_compatible.rs  (+17 more)
crates/goose/src/recipe/: manifest.rs  mod.rs  recipe_extension_adapter.rs
crates/goose/src/security/: adversary_inspector.rs  egress_inspector.rs  mod.rs  patterns.rs  scanner.rs  security_inspector.rs
crates/goose/src/session/: chat_history_search.rs  last_message_snippet.rs  legacy.rs  mod.rs  session_manager.rs  session_naming.rs
crates/goose/src/skills/: arguments.rs  client.rs  mod.rs
crates/goose/src/slash_commands/: mod.rs  recipe_slash_command.rs  skill_slash_command.rs  slash_command.rs  types.rs  util.rs
crates/goose/tests/: acp_custom_provider_methods_test.rs  acp_custom_requests_test.rs  acp_fork_session_test.rs  acp_provider_test.rs  acp_secret_cache_invalidation_test.rs  acp_server_test.rs  acp_transport_auth_test.rs  adversary_inspector_tests.rs  agent.rs  compaction.rs  complexity_parity.rs  local_inference_integration.rs  local_inference_perf.rs  mcp_integration_test.rs  providers.rs  session_id_propagation_test.rs  subprocess_cleanup.rs  tetrate_streaming.rs  tool_inspection_manager_tests.rs
crates/goose/tests/acp_common_tests/: mod.rs
crates/goose/tests/acp_fixtures/: mod.rs  provider.rs  server.rs
crates/goose/tests/acp_test_data/: openai_steer_first.txt  openai_steer_second.txt
(+439 files in other folders)
