[package]
name = "goose-acp-macros"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.104", default-features = false, features = ["full", "extra-traits"] }

[lints]
workspace = true
