[package]
name = "goose-models-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bundled canonical model registry for Goose"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
