[package]
name = "goose-sdk-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for the Goose SDK"

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
agent-client-protocol = { workspace = true, features = ["unstable"] }
agent-client-protocol-schema = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
uniffi = { version = "0.29", optional = true }

[package.metadata.cargo-machete]
ignored = ["agent-client-protocol-schema"]
